--- a/usw2/usw2-td2-eks/argocd/applications/copenhagen-vault.yaml
+++ b/usw2/usw2-td2-eks/argocd/applications/copenhagen-vault.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     helm:
-      repositoryURL: https://helm.releases.hashicorp.com
+      repoURL: https://helm.releases.hashicorp.com
       chart: vault
       version: latest
     targetRevision: main
