--- a/usw2/usw2-td2-eks/argocd/applications/oslo-vault.yaml
+++ b/usw2/usw2-td2-eks/argocd/applications/oslo-vault.yaml
@@ -10,10 +10,9 @@ spec:
       repoURL: https://helm.releases.hashicorp.com
       chart: vault
       version: latest
-    targetRevision: main
   destination:
     server: https://kubernetes.default.svc
-    namespace: oslo-vault  # Unique namespace for oslo-vault
+    namespace: oslo-vault
   syncPolicy:
     automated:
       prune: true
