--- a/usw2/usw2-td2-eks/argocd/applications/oslo-vault.yaml
+++ b/usw2/usw2-td2-eks/argocd/applications/oslo-vault.yaml
@@ -9,6 +9,7 @@ spec:
       repoURL: https://helm.releases.hashicorp.com
       chart: vault
       version: latest
+  targetRevision: main
   destination:
     server: https://kubernetes.default.svc
     namespace: oslo-vault
